# baxter-ts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pre_launch_check.py  pyproject.toml
baxter_ts/: __init__.py  core.py
baxter_ts/anomaly/: __init__.py  detector.py
baxter_ts/bax/: __init__.py  explainer.py  narrator.py
baxter_ts/models/: __init__.py  base_model.py  catboost_model.py  rf_model.py  selector.py  xgb_model.py
baxter_ts/preprocessing/: __init__.py  column_handler.py  feature_eng.py  imputer.py  outlier.py  scaler.py  splitter.py  transformer.py  validator.py
baxter_ts/report/: __init__.py  generator.py
baxter_ts/visualization/: __init__.py  plotter.py
examples/: quickstart.py
tests/: test_all_datasets.py  test_baxter.py  test_comprehensive.py
tests/datasets/: 01_retail_sales_daily.csv  02_retail_multivariate_with_categoricals.csv  03_energy_hourly_iot.csv  04_stock_price_daily.csv  05_web_traffic_monthly.csv  06_manufacturing_heavy_missing.csv  07_healthcare_weekly_gaps.csv  08_finance_quarterly_short.csv  09_demand_date_as_index.csv  10_edge_cases_constant_allnan_bool.csv  generate_test_datasets.py
