[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baxter-ts"
version = "0.1.3"
description = "AutoML time series library with BAX behavioural explanation, anomaly detection and visualisation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Pooja Patil", email = "pooja.patil2509@gmail.com"}
]
keywords = ["time-series", "automl", "forecasting", "anomaly-detection", "explainability", "shap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "catboost>=1.2",
  "shap>=0.43",
  "plotly>=5.18",
  "statsmodels>=0.14",
  "scipy>=1.11",
  "jinja2>=3.1",
  "kaleido>=0.2",
]

[project.urls]
Homepage = "https://github.com/PoojaPatil2509/baxter-ts"
Repository = "https://github.com/PoojaPatil2509/baxter-ts"
Issues = "https://github.com/PoojaPatil2509/baxter-ts/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff", "twine", "build"]

[tool.setuptools.packages.find]
where = ["."]
include = ["baxter_ts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["baxter_ts"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false